Добавлен бэк для собственности
